fix bug where text was changing to white when dark mode is enabled
Fixed bug on favourites component where text was changed to white on a white background.

--- a/src/app/favourites/favourites.component.scss
+++ b/src/app/favourites/favourites.component.scss
@@ -14,7 +14,6 @@ div {
   h2 {
     flex:3;
     padding:15px;
-    background: #fff;
   }
 }
 div:hover {
@@ -26,6 +25,7 @@ div:hover {
 @media only screen and (max-width: 438px) {
   div {
     flex-direction: column;
+    background: #fff;
     img {
       width:100%;
       height:auto;
@@ -36,6 +36,8 @@ div:hover {
     h2 {
       position:absolute;
       font-size:1.2rem !important;
+      color:#3f4447;
+      background: #fff;
     }
   }
 }
